<resources>
    <string name="app_name">MAD Assignment V2</string>
    <string name="sign_out">Sign Out</string>
    <string name="dark_mode">Switch to Dark Mode</string>
    <string name="light_mode">Switch to Light Mode</string>
    <string name="edit_user">Edit User Details</string>
    <string name="add_collection">Add Collection</string>
    <string name="add_set">Add Set</string>
    <string name="collection_name_hint">Collection Name</string>
    <string name="collection_description_hint">Collection Description</string>
    <string name="add_image_button">Add Image</string>
    <string name="set_name_hint">Set Name</string>
    <string name="set_description_hint">Set Description</string>
    <string name="is_public">Discoverable</string>
    <string name="added_collection">Collection has been added</string>
    <string name="added_set">Set has been added</string>
    <string name="set_number_hint">Set Number</string>
    <string name="set_piece_count">Set Piece Number</string>
    <string name="set_age_range">Set Age</string>
    <string name="set_price">Set Price</string>
    <string name="set_name">Set Name</string>
    <string name="set_id">Set Number</string>
    <string name="collection_name">Collection Name</string>
    <string name="collection_description">Collection Description</string>
    <string name="collection_set_number">Number of Sets</string>
    <string name="collection_date">DD-MM-YYYY</string>
    <string name="collections">Collections</string>
    <string name="sets">Sets</string>
    <string name="add">Add</string>
    <string name="map">Map</string>
    <string name="discover">Discover</string>
    <string name="settings">Settings</string>
    <string name="public_collections">Public Collections</string>
    <string name="public_sets">Public Sets</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="user_not_exist">User Does Not Exist</string>
    <string name="incorrect_password">Password is Incorrect</string>
    <string name="user_exist">User Already Exists</string>
    <string name="lego">LEGO</string>
    <string name="missing_collection_info">Please Enter a Title and/or Description</string>
    <string name="select_language">Select Language</string>
    <string name="missing_set_info">Please fill all fields with correct data</string>
    <string name="search">Search</string>
    <string name="item_add">Add Item</string>
    <string name="sort">Sort</string>
    <string name="name_sort_a_z">Name (A-Z)</string>
    <string name="name_sort_z_a">Name (Z-A)</string>
    <string name="date_sort_old_new">Date (Old -> New)</string>
    <string name="date_sort_new_old">Date (New -> Old)</string>
    <string name="num_of_sets_sort_low_high">Number of Sets (Low - High)</string>
    <string name="num_of_sets_sort_high_low">Number of Sets (High - Low)</string>
    <string name="id_low_high">ID (Low -> High)</string>
    <string name="id_high_low">ID (High -> Lo)</string>
    <string name="num_of_pieces_low_high">Number of Pieces (Low - High)</string>
    <string name="num_of_pieces_high_low">Number of Pieces (High - Low)</string>
    <string name="min_age_low_high">Minimum Age (Low - High)</string>
    <string name="min_age_high_low">Minimum Age (High - Low)</string>
    <string name="price_low_high">Price (Low - High)</string>
    <string name="price_high_low">Price (High - Low)</string>
    <string name="cancel">Cancel</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="missing_login_info">User name or Password missing</string>
    <string name="success">Success</string>
    <string name="collection_name_length">Collection name needs to be between 2 and 20 characters</string>
    <string name="collection_description_length">Collection description needs to be between 5 and 30 characters</string>
    <string name="user_name_length">User name needs to be between 2 and 20 characters</string>
    <string name="user_password_length">User password needs to be between 5 and 30 characters</string>
    <string name="set_name_length">Set name needs to be between 5 and 20 characters</string>
    <string name="set_number_limit">Set number needs to be between 1 and 9999999</string>
    <string name="set_piece_count_limit">Set piece count needs to be between 50 and 999999</string>
    <string name="set_age_limit">Set age needs to be between 3 and 18</string>
    <string name="set_price_limit">Set price needs to be between 1 and 99999</string>
    <string name="update_collection">Update Collection</string>
    <string name="update_set">Update Set</string>
    <string name="collection_removed">Collection Removed</string>
    <string name="set_removed">Set Removed</string>
</resources>



