<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/item_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/set_sort_name_asc"
                android:title="@string/name_sort_a_z" />
            <item
                android:id="@+id/set_sort_name_desc"
                android:title="@string/name_sort_z_a" />
            <item
                android:id="@+id/set_sort_number_asc"
                android:title="@string/id_low_high" />
            <item
                android:id="@+id/set_sort_number_desc"
                android:title="@string/id_high_low" />
            <item
                android:id="@+id/set_sort_pieceCount_asc"
                android:title="@string/num_of_pieces_low_high" />
            <item
                android:id="@+id/set_sort_pieceCount_desc"
                android:title="@string/num_of_pieces_high_low" />
            <item
                android:id="@+id/set_sort_age_asc"
                android:title="@string/min_age_low_high" />
            <item
                android:id="@+id/set_sort_age_desc"
                android:title="@string/min_age_high_low" />
            <item
                android:id="@+id/set_sort_price_asc"
                android:title="@string/price_low_high" />
            <item
                android:id="@+id/set_sort_price_desc"
                android:title="@string/price_high_low" />
        </menu>
    </item>
</menu>