<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="367dp"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="top|end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/lego"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/dots_menu" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="287dp"
                android:layout_height="188dp"
                android:layout_gravity="center"
                android:contentDescription="@string/lego"
                android:scaleType="fitCenter"
                android:src="@drawable/lego_logo_1972_1998_1233143649" />


        </FrameLayout>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/set_id"
            android:textSize="14sp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>
